# Raspberry-Pico-2-FreeRTOS-Projects

./: .gitignore  .gitmodules
praticas/freertos blink funcional/: CMakeLists.txt
praticas/freertos blink funcional/ProjectFiles/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
praticas/pratica 0/: CMakeLists.txt
praticas/pratica 0/src/: pratica_0.c
praticas/pratica 2/: CMakeLists.txt
praticas/pratica 2/src/: CMakeLists.txt  main.c
praticas/pratica 3/lib/: CMakeLists.txt
praticas/pratica 3/src/: CMakeLists.txt  main.c
praticas/pratica 4/: CMakeLists.txt
praticas/pratica 4 (cópia)/src/: main.c
praticas/pratica 4 Botao/: CMakeLists.txt
praticas/pratica 4 Botao/src/: CMakeLists.txt  main.c
praticas/pratica 4 Heap_5/lib/: CMakeLists.txt
praticas/pratica 4 Heap_5/src/: cpu_monitor.c  main.c
praticas/pratica 4/inc/: adc_custom.h  led.h
praticas/pratica 4/src/: CMakeLists.txt  main.c
praticas/pratica 5/: CMakeLists.txt
praticas/pratica 5-2/inc/: bttn.h  led.h
praticas/pratica 5-2/lib/: FreeRTOSConfig.h
praticas/pratica 5-2/src/: CMakeLists.txt  bttn.c  main.c
praticas/pratica 5/inc/: CMakeLists.txt  bttn.h
praticas/pratica 5/lib/: FreeRTOSConfig.h
praticas/pratica 5/src/: bttn.c  main.c
praticas/pratica 6/inc/: bttn.h  cpu_monitor.h  led.h
praticas/pratica 6/src/: CMakeLists.txt  adc_custom.c  bttn.c  main.c
praticas/pratica 7 (cópia)/inc/: led.h
praticas/pratica 7 (cópia)/src/: bttn.c  cpu_monitor.c  led.c  main.c
praticas/pratica 7/inc/: CMakeLists.txt  cpu_monitor.h
praticas/pratica 7/src/: bttn.c  (+2 more)
(+139 files in other folders)
